crates/uitest/fixtures/mir_check/borrowck_terminating_call_read_under_mut.snap
---
source: crates/uitest/tests/mir_check.rs
expression: res
input_file: fixtures/mir_check/borrowck_terminating_call_read_under_mut.fe
---
error[11-0002]: borrow conflict in `fn borrowck_terminating_call_read_under_mut`
   ┌─ borrowck_terminating_call_read_under_mut.fe:10:5
   │
 9 │     let p: mut u256 = mut x
   │                           - `x` is borrowed here
10 │     trap(p, x)
   │     ^^^^^^^^^^ access overlaps an active `mut` borrow
